--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.App{
+  background-image: linear-gradient(79deg, #EB3349,#F45C43);
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+  background-size: cover;
+  background-position: center;
+}
