--- a/frontend/src/components/ProjectListStyle.css
+++ b/frontend/src/components/ProjectListStyle.css
@@ -1,28 +1,70 @@
 .projectListContainer {
-   /* Set the background color to a light gray */
   padding: 16px;
   justify-content: center;
   max-height: 85vh;
   overflow-y: auto;
+  position: relative;
+  z-index: 0;
 }
+
+.topRightContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.topRightContainer input[type="text"] {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.addButton {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 
 .title {
   margin-top: 0px;
+  margin-right: auto;
   font-size: 24px;
   color: white;
-}
-
-.projectsContainer {
-  width: 100%;
-  max-height: calc(100vh - navbarHeight);
-  overflow-y: auto;
 }
 
 .projectsWrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content:flex-start
+  justify-content:center
 }
+
+.consider_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 10px;
+}
+
+
+@media screen and (max-width: 1200px){
+  .projectsWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .consider_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 10px;
+  }
+  }
 
 
 @media screen and (max-width: 821px){
@@ -31,4 +73,30 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.consider_grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 20px;
+  row-gap: 10px;
 }
+}
+
+
+@media screen and (max-width: 460px){
+  .projectsWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .consider_grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 20px;
+    row-gap: 10px;
+  }
+  }
+
+
+
