--- a/frontend/src/components/ProjectStyle.css
+++ b/frontend/src/components/ProjectStyle.css
@@ -1,6 +1,6 @@
 .projects {
-  width: 200px;
-  height: 300px;
+  width: 300px;
+  height: 350px;
   border: 1px solid #ccc;
   border-radius: 8px;
   padding: 16px;
@@ -10,6 +10,7 @@
   background-color: white;
   margin: 15px;
   margin-top: 20px;
+  z-index: 0;
 }
 
 .projectImage {
@@ -52,3 +53,13 @@
   height: 16px;
   margin-right: 4px;
 }
+
+.title-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.title-container a{
+  font-size: 15px;
+}
+
