--- a/frontend/src/components/ProjectListStyle.css
+++ b/frontend/src/components/ProjectListStyle.css
@@ -22,7 +22,7 @@
 
 .addButton {
   padding: 8px 16px;
-  background-color: #007bff;
+  background-color: #f31b1be3;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -45,10 +45,25 @@
 
 .consider_grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 20px;
   row-gap: 10px;
 }
+
+@media screen and (max-width: 1400px){
+  .projectsWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .consider_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 10px;
+  }
+  }
 
 
 @media screen and (max-width: 1200px){
