--- a/frontend/src/components/ProjectSiteCardStyle.css
+++ b/frontend/src/components/ProjectSiteCardStyle.css
@@ -16,7 +16,8 @@
 
 .project-site-card img {
   max-height: 200px;
-  object-fit: contain;
+  max-width: 190px;
+  object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
 }
