--- a/frontend/src/components/ProjectSite.css
+++ b/frontend/src/components/ProjectSite.css
@@ -40,69 +40,168 @@
 }
 
 .card-grid {
-  height: 83vh;
-  overflow-y: scroll;
+  height: 100vh;
+  overflow-y: auto;
   overflow: auto;
   display: inline-flex;
   flex-wrap: wrap;
 }
 
+@media screen and (max-height: 1400px){
 
-@media screen and (max-width: 821px){
-  .button-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+
+
+    .tab-navigation button {
+            border: none;
+            background-color: #f2f2f2;
+            padding: 10px 20px;
+            margin-right: 5px;
+            margin-bottom: 10px;
+            border-radius: 4px;
+            cursor: pointer;
+    }
+
+    .card-grid {
+            max-height: 100vh;
+            overflow-y: auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+    }
+
+    }
+
+@media screen and (max-height: 1200px){
+
+
 
   .tab-navigation button {
-    border: none;
-    background-color: #f2f2f2;
-    padding: 10px 20px;
-    margin-right: 5px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    cursor: pointer;
+          border: none;
+          background-color: #f2f2f2;
+          padding: 10px 20px;
+          margin-right: 5px;
+          margin-bottom: 10px;
+          border-radius: 4px;
+          cursor: pointer;
   }
 
   .card-grid {
-    height: 100%;
-    overflow-y: scroll;
-    display: inline-flex;
-    flex-wrap: wrap;
+          max-height: 81vh;
+          overflow-y: auto;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
   }
 
   }
 
+@media screen and (max-height: 1100px){
 
-@media screen and (max-width: 440px){
+
+    .tab-navigation button {
+            border: none;
+            background-color: #f2f2f2;
+            padding: 10px 20px;
+            margin-right: 5px;
+            margin-bottom: 10px;
+            border-radius: 4px;
+            cursor: pointer;
+    }
+
+    .card-grid {
+            max-height: 79vh;
+            overflow-y: auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+    }
+
+    }
+
+@media screen and (max-height: 950px){
+
+    .button-container {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+    }
+
+    .tab-navigation button {
+          border: none;
+          background-color: #f2f2f2;
+          padding: 10px 20px;
+          margin-right: 5px;
+          margin-bottom: 10px;
+          border-radius: 4px;
+          cursor: pointer;
+    }
+
+    .card-grid {
+          max-height: 75vh;
+          overflow-y: auto;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+    }
+
+    }
+
+@media screen and (max-height: 800px){
 
   .button-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
   }
 
   .tab-navigation button {
-    border: none;
-    background-color: #f2f2f2;
-    padding: 10px 20px;
-    margin-right: 5px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    cursor: pointer;
+        border: none;
+        background-color: #f2f2f2;
+        padding: 10px 20px;
+        margin-right: 5px;
+        margin-bottom: 10px;
+        border-radius: 4px;
+        cursor: pointer;
   }
 
   .card-grid {
-    max-height: 68vh;
-    overflow-y: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+        max-height: 71vh;
+        overflow-y: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
   }
 
   }
 
+
+@media screen and (max-height: 667px){
+
+  .button-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+  }
+
+  .tab-navigation button {
+      border: none;
+      background-color: #f2f2f2;
+      padding: 10px 20px;
+      margin-right: 5px;
+      margin-bottom: 10px;
+      border-radius: 4px;
+      cursor: pointer;
+  }
+
+  .card-grid {
+      max-height: 68vh;
+      overflow-y: auto;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+
+  }
 
 
 
