--- a/frontend/src/components/ProjectSiteCardStyle.css
+++ b/frontend/src/components/ProjectSiteCardStyle.css
@@ -3,15 +3,56 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 250px;
+  height: 260px;
   width: 200px;
   border-radius: 10px;
-  background-color: #ffffff;
+  background-color:#F0F0F0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
   margin-top: 25px;
   margin-bottom: 10px;
   margin-left: 10px;
+  position: relative; /* Add this to position the trash icon and checkbox */
+  transition: background-color 0.3s;
+}
+
+.project-site-card.with-checkbox {
+  padding-top: 20px; /* Add padding to accommodate the checkbox and trash icon */
+}
+
+.project-site-card.checked {
+  background-color: #ED1D24; /* Change background color when checkbox is checked */
+}
+
+.project-site-card .icons-container {
+  position: absolute;
+  top: 10px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.project-site-card .trash-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  margin-left: 3px;
+  background-color: gray;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.project-site-card .trash-icon i {
+  color: #ffffff;
+}
+
+.project-site-card .checkbox {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .project-site-card img {
