--- a/frontend/src/components/ProjectSiteCardStyle.css
+++ b/frontend/src/components/ProjectSiteCardStyle.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 260px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
   border-radius: 10px;
   background-color:#F0F0F0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -57,7 +57,7 @@
 
 .project-site-card img {
   max-height: 200px;
-  max-width: 190px;
+  max-width: 250px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -75,4 +75,8 @@
 
 .project-site-card .card-text a:hover {
   color: #ff0000;
+}
+
+p {
+  font-size: 14px;
 }
