--- a/frontend/src/components/ProjectSite.css
+++ b/frontend/src/components/ProjectSite.css
@@ -47,6 +47,58 @@
   flex-wrap: wrap;
 }
 
+.input-row {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.long-input {
+  width: 300px; /* Adjust the width as needed */
+}
+
+/* YourComponent.css */
+
+.tag-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.tag {
+  display: inline-flex;
+  align-items: center;
+  background-color: #e0e0e0;
+  border-radius: 16px;
+  padding: 5px 10px;
+  margin: 5px;
+  color: #333;
+}
+
+.tag-remove {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  margin-left: 5px;
+  background-color: #aaa;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  font-size: 12px; /* Adjust the font size as needed */
+  line-height: 1; /* Adjust the line height as needed */
+  padding-bottom: 3px;
+  padding-right: 1px; /* Adjust the padding as needed */
+}
+
+.tag-remove:hover {
+  background-color: #888;
+}
+
+
 @media screen and (max-height: 1400px){
 
 
@@ -70,6 +122,7 @@
     }
 
     }
+
 
 @media screen and (max-height: 1200px){
 
