--- a/frontend/src/components/ProjectSite.css
+++ b/frontend/src/components/ProjectSite.css
@@ -54,10 +54,8 @@
 }
 
 .long-input {
-  width: 300px; /* Adjust the width as needed */
+  width: 300px;
 }
-
-/* YourComponent.css */
 
 .tag-container {
   display: flex;
@@ -96,6 +94,24 @@
 
 .tag-remove:hover {
   background-color: #888;
+}
+
+.loading-circle {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid #ccc;
+  border-top-color: #333;
+  border-radius: 50%;
+  animation: spin 1s infinite linear;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 
