--- a/frontend/src/components/AnnotationPopupStyle.css
+++ b/frontend/src/components/AnnotationPopupStyle.css
@@ -85,3 +85,22 @@
   background-color: #007bff;
   color: #fff;
 }
+
+
+.loading-circle {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid #ccc;
+  border-top-color: #333;
+  border-radius: 50%;
+  animation: spin 1s infinite linear;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
