--- a/frontend/src/components/AnnotationPopupStyle.css
+++ b/frontend/src/components/AnnotationPopupStyle.css
@@ -24,7 +24,6 @@
 
 .image-container {
   position: relative;
-  margin-bottom: 20px;
 }
 
 .image-container img {
@@ -103,4 +102,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.credentials-container {
+  margin-bottom: 10px; /* Adjust the margin as needed */
+}
+
+.credential-input {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.credential-input label {
+  margin-right: 10px;
+}
+
+.credential-input input {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.credentials-title {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
