--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,10 +5,20 @@
 }
 
 .App{
-  background-image: linear-gradient(79deg, #EB3349,#F45C43);
+  /*background-image: linear-gradient(79deg, #EB3349,#F45C43);*/
+  background-color: white;
   position: fixed;
   min-width: 100%;
   min-height: 100%;
   background-size: cover;
   background-position: center;
+}
+
+.logo {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  opacity: 0.7; /* Adjust the opacity as per your requirement */
+  width: 200px; /* Adjust the width as per your requirement */
+  height: auto; /* Maintain aspect ratio */
 }
