--- a/frontend/src/components/KIDiensteStyle.css
+++ b/frontend/src/components/KIDiensteStyle.css
@@ -4,7 +4,7 @@
   align-items: center; /* Center horizontally */
   padding: 20px;
   max-width: 100vw;
-  overflow-x: auto;
+  overflow: auto; /* Enable scrolling */
 }
 
 .header-center {
@@ -75,19 +75,25 @@
   margin-top: 10px;
   width:260px;
 }
+
+/* Webcam container */
 .webcam-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   margin-top: 20px;
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 
 .webcam {
   width: 100%;
-  max-width: 400px;
+  height: auto;
   border: 1px solid #ccc;
   border-radius: 8px;
   margin-bottom: 10px;
+  object-fit: cover;
 }
 
 .buttons-between-cards {
